--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,126 +2,388 @@
     <string name="app_name">Spear Client</string>
   	<string name="walk">
 [{
-	"name":"horse_body",
+	"name":"horse_head",
 	"rot":[{
-		"start":-45,
-		"end":45,
-		"time":1.5
+		"start":0,
+		"end":-5,
+		"time":0.45
 	}, {
-		"start":45,
-		"end":-45,
-		"time":1.5
+		"start":-5,
+		"end":0,
+		"time":0.45
 	}]
 }, {
 	"name":"horse_neck",
 	"rot":[{
-		"start":-45,
-		"end":45,
-		"time":1.5
+		"start":-26,
+		"end":-30,
+		"time":0.45
 	}, {
-		"start":45,
-		"end":-45,
-		"time":1.5
+		"start":-30,
+		"end":-26,
+		"time":0.45
 	}]
 }, {
-	"name":"horse_head",
+	"name":"horse_body",
 	"rot":[{
-		"start":-45,
-		"end":45,
-		"time":1.5
+		"start":0,
+		"end":1,
+		"time":0.225
 	}, {
-		"start":45,
-		"end":-45,
-		"time":1.5
+		"start":1,
+		"end":-1,
+		"time":0.45
+	}, {
+		"start":-1,
+		"end":0,
+		"time":0.225
 	}]
 }, {
 	"name":"horse_leg_right_front_top",
 	"rot":[{
-		"start":-45,
-		"end":45,
-		"time":1.5
+		"start":0,
+		"end":-20,
+		"time":0.15
 	}, {
-		"start":45,
-		"end":-45,
-		"time":1.5
+		"start":-20,
+		"end":25,
+		"time":0.15
+	}, {
+		"start":25,
+		"end":30,
+		"time":0.15
+	}, {
+		"start":30,
+		"end":0,
+		"time":0.45
 	}]
 }, {
 	"name":"horse_leg_right_front_bottom",
 	"rot":[{
-		"start":-45,
-		"end":45,
-		"time":1.5
+		"start":0,
+		"end":-10,
+		"time":0.15
 	}, {
-		"start":45,
-		"end":-45,
-		"time":1.5
+		"start":-10,
+		"end":-50,
+		"time":0.15
+	}, {
+		"start":-50,
+		"end":0,
+		"time":0.15
 	}]
 }, {
 	"name":"horse_leg_left_front_top",
 	"rot":[{
-		"start":-45,
-		"end":45,
-		"time":1.5
+		"start":30,
+		"end":0,
+		"time":0.45
 	}, {
-		"start":45,
-		"end":-45,
-		"time":1.5
+		"start":0,
+		"end":-20,
+		"time":0.15
+	}, {
+		"start":-20,
+		"end":25,
+		"time":0.15
+	}, {
+		"start":25,
+		"end":30,
+		"time":0.15
 	}]
 }, {
 	"name":"horse_leg_left_front_bottom",
 	"rot":[{
-		"start":-45,
-		"end":45,
-		"time":1.5
+		"start":0,
+		"end":0,
+		"time":0.45
+	},{
+		"start":0,
+		"end":-10,
+		"time":0.15
 	}, {
-		"start":45,
-		"end":-45,
-		"time":1.5
-	}]
-}, {
-	"name":"horse_leg_right_back_top",
-	"rot":[{
-		"start":-45,
-		"end":45,
-		"time":1.5
+		"start":-10,
+		"end":-50,
+		"time":0.15
 	}, {
-		"start":45,
-		"end":-45,
-		"time":1.5
-	}]
-}, {
-	"name":"horse_leg_right_back_bottom",
-	"rot":[{
-		"start":-45,
-		"end":45,
-		"time":1.5
-	}, {
-		"start":45,
-		"end":-45,
-		"time":1.5
+		"start":-50,
+		"end":0,
+		"time":0.15
 	}]
 }, {
 	"name":"horse_leg_left_back_top",
 	"rot":[{
-		"start":-45,
-		"end":45,
-		"time":1.5
+		"start":0,
+		"end":-20,
+		"time":0.15
 	}, {
-		"start":45,
-		"end":-45,
-		"time":1.5
+		"start":-20,
+		"end":25,
+		"time":0.15
+	}, {
+		"start":25,
+		"end":30,
+		"time":0.15
+	}, {
+		"start":30,
+		"end":0,
+		"time":0.45
 	}]
 }, {
 	"name":"horse_leg_left_back_bottom",
 	"rot":[{
-		"start":-45,
-		"end":45,
-		"time":1.5
+		"start":0,
+		"end":-10,
+		"time":0.15
 	}, {
-		"start":45,
-		"end":-45,
-		"time":1.5
+		"start":-10,
+		"end":-50,
+		"time":0.15
+	}, {
+		"start":-50,
+		"end":0,
+		"time":0.15
+	}]
+}, {
+	"name":"horse_leg_right_back_top",
+	"rot":[{
+		"start":30,
+		"end":0,
+		"time":0.45
+	}, {
+		"start":0,
+		"end":-20,
+		"time":0.15
+	}, {
+		"start":-20,
+		"end":25,
+		"time":0.15
+	}, {
+		"start":25,
+		"end":30,
+		"time":0.15
+	}]
+}, {
+	"name":"horse_leg_right_back_bottom",
+	"rot":[{
+		"start":0,
+		"end":0,
+		"time":0.45
+	},{
+		"start":0,
+		"end":-10,
+		"time":0.15
+	}, {
+		"start":-10,
+		"end":-50,
+		"time":0.15
+	}, {
+		"start":-50,
+		"end":0,
+		"time":0.15
 	}]
 }]
     </string>
+	<string name="run">
+[{
+	"name":"horse_head",
+	"rot":[{
+		"start":30,
+		"end":30,
+		"time":0.9
+	}]
+}, {
+	"name":"horse_neck",
+	"rot":[{
+		"start":-35,
+		"end":-40,
+		"time":0.45
+	}, {
+		"start":-40,
+		"end":-35,
+		"time":0.45
+	}]
+}, {
+	"name":"horse_body",
+	"rot":[{
+		"start":-4,
+		"end":-2,
+		"time":0.225
+	}, {
+		"start":-2,
+		"end":-6,
+		"time":0.45
+	}, {
+		"start":-6,
+		"end":-4,
+		"time":0.225
+	}]
+}, {
+	"name":"horse_leg_right_front_top",
+	"rot":[{
+		"start":22.5,
+		"end":-35,
+		"time":0.225
+	}, {
+		"start":-35,
+		"end":-10,
+		"time":0.075
+	}, {
+		"start":-10,
+		"end":100,
+		"time":0.375
+	}, {
+		"start":100,
+		"end":45,
+		"time":0.15
+	}, {
+		"start":45,
+		"end":22.5,
+		"time":0.075
+	}]
+}, {
+	"name":"horse_leg_right_front_bottom",
+	"rot":[{
+		"start":0,
+		"end":0,
+		"time":0.15
+	}, {
+		"start":0,
+		"end":-90,
+		"time":0.375
+	}, {
+		"start":-90,
+		"end":-90,
+		"time":0.15
+	}, {
+		"start":-90,
+		"end":0,
+		"time":0.225
+	}]
+}, {
+	"name":"horse_leg_left_front_top",
+	"rot":[{
+		"start":70,
+		"end":-15,
+		"time":0.45
+	}, {
+		"start":-15,
+		"end":70,
+		"time":0.45
+	}]
+}, {
+	"name":"horse_leg_left_front_bottom",
+	"rot":[{
+		"start":-60,
+		"end":0,
+		"time":0.075
+	}, {
+		"start":0,
+		"end":0,
+		"time":0.225
+	}, {
+		"start":0,
+		"end":-90,
+		"time":0.3
+	}, {
+		"start":-90,
+		"end":-90,
+		"time":0.15
+	}, {
+		"start":-90,
+		"end":-60,
+		"time":0.15
+	}]
+}, {
+	"name":"horse_leg_left_back_top",
+	"rot":[{
+		"start":22.5,
+		"end":-35,
+		"time":0.225
+	}, {
+		"start":-35,
+		"end":-10,
+		"time":0.075
+	}, {
+		"start":-10,
+		"end":100,
+		"time":0.375
+	}, {
+		"start":100,
+		"end":45,
+		"time":0.15
+	}, {
+		"start":45,
+		"end":22.5,
+		"time":0.075
+	}]
+}, {
+	"name":"horse_leg_left_back_bottom",
+	"rot":[{
+		"start":0,
+		"end":0,
+		"time":0.15
+	}, {
+		"start":0,
+		"end":-90,
+		"time":0.375
+	}, {
+		"start":-90,
+		"end":-90,
+		"time":0.15
+	}, {
+		"start":-90,
+		"end":0,
+		"time":0.225
+	}]
+}, {
+	"name":"horse_leg_right_back_top",
+	"rot":[{
+		"start":70,
+		"end":-15,
+		"time":0.45
+	}, {
+		"start":-15,
+		"end":70,
+		"time":0.45
+	}]
+}, {
+	"name":"horse_leg_right_back_bottom",
+	"rot":[{
+		"start":-60,
+		"end":0,
+		"time":0.075
+	}, {
+		"start":0,
+		"end":0,
+		"time":0.225
+	}, {
+		"start":0,
+		"end":-90,
+		"time":0.3
+	}, {
+		"start":-90,
+		"end":-90,
+		"time":0.15
+	}, {
+		"start":-90,
+		"end":-60,
+		"time":0.15
+	}]
+}]
+	</string>
+	<string name="idle">
+[{
+	"name":"horse_neck",
+	"rot":[{
+		"start":0,
+		"end":1,
+		"time":0.4
+	}, {
+		"start":1,
+		"end":0,
+		"time":0.4
+	}]
+}]
+	</string>
 </resources>
