edit some infos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Spear Client</string>
+    <string name="app_name">Just Lance</string>
   	<string name="walk">
 [{
 	"name":"horse_head",
